Fix minor misalignment of pinned message container

--- a/src/client/servable/css/chat.css
+++ b/src/client/servable/css/chat.css
@@ -313,7 +313,8 @@ input, button {
 #chat-container #pinned-message-container {
   display: none;
   width: 100%;
-  min-height: 80px;
+  min-height: 100px;
+  box-sizing: border-box;
   border-bottom: 1px solid black;
   padding: 10px;
   font-size: 1.1em;
